# napari-boids

./: LICENSE  README.md  setup.cfg  tox.ini
src/napari_boids/: _BoidFlock.py  __init__.py  _widget.py  napari.yaml
src/napari_boids/_tests/: test_widget.py
